--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,10 +25,11 @@
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/compiler-sfc": "^3.4.0",
     "autoprefixer": "^10.4.21",
+    "baseline-browser-mapping": "^2.9.6",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.18",
     "typescript": "^5.3.3",
     "vite": "^5.4.20",
-    "vue-tsc": "^1.8.27"
+    "vue-tsc": "^3.1.8"
   }
 }
